force-app/main/default/objects/Credit_Note__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>