force-app/main/default/objects/Credit_Note__c/fields/Primary_Return__c.field-meta.xml
<CustomField>
    <fullName>Primary_Return__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Return</label>
    <referenceTo>Primary_Return__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>