force-app/main/default/objects/Credit_Note__c/fields/Total_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Amount__c</fullName>
    <formula>IF( Claim__c != null,  Credit_Amount__c ,  Total_Primary_Return_Amount__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>