force-app/main/default/objects/Credit_Note__c/fields/Total_Primary_Return_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Primary_Return_Amount__c</fullName>
    <label>Total Primary Return Amount</label>
    <summarizedField>Credit_Note_Item__c.Credit_Amount__c</summarizedField>
    <summaryForeignKey>Credit_Note_Item__c.Credit_Note__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>